--- a/android/Tracker/app/src/main/res/values/strings.xml
+++ b/android/Tracker/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
-    <string name="app_name">GPSTracker</string>
+    <string name = "app_name">GPSTracker</string>
+    <string name = "web_address">http://172.124.203.226:11000/api/tracker</string>
+    <string name = "user_name">address</string>
 </resources>
